Fix Mastercard project scope display

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <span class="project-date">2021 - 2024</span>
                     </div>
                     <div class="project-role">Lead Project Manager</div>
-                    <div class="project-scope" data-cs="Rozpočet: " data-en="Scope: "><span data-cs="Rozpočet:" data-en="Scope:">Rozpočet:</span> <strong>150M+ CZK</strong></div>
+                    <div class="project-scope"><span data-cs="Rozpočet:" data-en="Scope:">Rozpočet:</span> <strong>150M+ CZK</strong></div>
                     <ul class="project-details">
                         <li data-cs="Vedení týmu 4 projektových manažerů" data-en="Managed team of 4 PMs">Vedení týmu 4 projektových manažerů</li>
                         <li data-cs="Delivery integrace napříč více trhy" data-en="Delivered integrations across multiple markets">Delivery integrace napříč více trhy</li>
