Fix typos: ownership and delivery, Lead→Led grammar

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="about-text">
                     <p class="lead" data-cs="Senior Business Consultant a Project Manager se specializací na fintech, platební systémy a enterprise IT projekty." data-en="Senior Business Consultant / Project Manager with 10+ years of experience in fintech, payments and enterprise IT projects.">Senior Business Consultant a Project Manager se specializací na fintech, platební systémy a enterprise IT projekty.</p>
                     <p data-cs="Specializuji se na překlad byznysových potřeb do škálovatelných technických řešení, vedení cross-funkčních týmů a delivery projektů s rozpočty až 150 milionů Kč." data-en="Specialized in translating business needs into scalable technical solutions, leading cross-functional teams and delivering projects up to CZK 150M budgets.">Specializuji se na překlad byznysových potřeb do škálovatelných technických řešení, vedení cross-funkčních týmů a delivery projektů s rozpočty až 150 milionů Kč.</p>
-                    <p data-cs="Mou silnou stránkou je stakeholder management, ownership nad delivery a hands-on přístup k realizaci." data-en="Strong stakeholder management, delivery ownership and hands-on execution mindset.">Mou silnou stránkou je stakeholder management, ownership nad delivery a hands-on přístup k realizaci.</p>
+                    <p data-cs="Mou silnou stránkou je stakeholder management, ownership and delivery a hands-on přístup k realizaci." data-en="Strong stakeholder management, delivery ownership and hands-on execution mindset.">Mou silnou stránkou je stakeholder management, ownership and delivery a hands-on přístup k realizaci.</p>
                     <div class="about-details">
                         <div class="detail">
                             <span class="detail-number">10+</span>
@@ -139,7 +139,7 @@
                     <div class="project-role">PM / Key Account Manager</div>
                     <div class="project-scope"><span data-cs="Rozpočet:" data-en="Scope:">Rozpočet:</span> <strong>120M+ CZK</strong></div>
                     <ul class="project-details">
-                        <li data-cs="Vedení vývojových, testovacích a provozních týmů" data-en="Lead development, testing, and operations teams">Vedení vývojových, testovacích a provozních týmů</li>
+                        <li data-cs="Vedení vývojových, testovacích a provozních týmů" data-en="Led development, testing, and operations teams">Vedení vývojových, testovacích a provozních týmů</li>
                         <li data-cs="Každodenní byznysová komunikace" data-en="Delivered day-to-day business communication">Každodenní byznysová komunikace</li>
                         <li data-cs="Prezentace vývoje nových unikátních funkcionalit" data-en="Presented the development of new unique functionalities">Prezentace vývoje nových unikátních funkcionalit</li>
                     </ul>
@@ -155,7 +155,7 @@
                     <ul class="project-details">
                         <li data-cs="Záchrana výrazně zpožděného projektu" data-en="Got a strongly delayed project back on track">Záchrana výrazně zpožděného projektu</li>
                         <li data-cs="Control management a řízení vývoje" data-en="Provided control management, development management">Control management a řízení vývoje</li>
-                        <li data-cs="Krizová komunikace se všemi stakeholdery" data-en="Lead crisis communication with all internal and external stakeholders">Krizová komunikace se všemi stakeholdery</li>
+                        <li data-cs="Krizová komunikace se všemi stakeholdery" data-en="Led crisis communication with all internal and external stakeholders">Krizová komunikace se všemi stakeholdery</li>
                     </ul>
                 </div>
             </div>
